--- a/project.html
+++ b/project.html
@@ -8,10 +8,10 @@
 <body>
     <img src="img 1.png" width="260" height="300">
     <h1>Muhammad Aizaz </h1>
-    <a href="/MyPortfolio/">Home</a>
-    <a href="/MyPortfolio/project.html">Project</a>
-    <a href="/MyPortfolio/skills.html">Skills</a>
-    <a href="/MyPortfolio/contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="project.html">Project</a>
+    <a href="skills.html">Skills</a>
+    <a href="contact.html">Contact</a>
     <h2>My Projects</h2>
     <img src="gig 2.png" width="500" height="400" hspace="5" >
     <img src="gig 3.png" width="500" height="400" hspace="5" >
