--- a/skills.html
+++ b/skills.html
@@ -8,10 +8,10 @@
 <body>
     <img src="img 1.png" width="260" height="300">
     <h1>Muhammad Aizaz </h1>
-    <a href="/MyPortfolio/">Home</a>
-    <a href="/MyPortfolio/project.html">Project</a>
-    <a href="/MyPortfolio/skills.html">Skills</a>
-    <a href="/MyPortfolio/contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="project.html">Project</a>
+    <a href="skills.html">Skills</a>
+    <a href="contact.html">Contact</a>
     <h2>My Skills</h2>
     <ul>
         <li>Web Development</li>
