--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <img src="img 1.png" width="260" height="300">
     <h1>Muhammad Aizaz </h1>
-    <a href="/MyPortfolio/">Home</a>
-    <a href="/MyPortfolio/project.html">Project</a>
-    <a href="/MyPortfolio/skills.html">Skills</a>
-    <a href="/MyPortfolio/contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="project.html">Project</a>
+    <a href="skills.html">Skills</a>
+    <a href="contact.html">Contact</a>
     <h2>My Personal Details</h2>
     <p>
         My name is Muhammad Aizaz. I reside in Saddar. I completed my Matriculation from Fazaia Degree College Peshawar and my Intermediate from FG Degree College Peshawar. Currently, I am pursuing BS in Computer Science at the University of Peshawar. Additionally, I have obtained a Diploma in Information Technology.
